fixed style issue causign ticket flyover header to be unreadable

--- a/src/styles/popup-form.less
+++ b/src/styles/popup-form.less
@@ -81,9 +81,7 @@
       }
     }
   }
-  &.warning {
-    background-color: #FFF5DF;
-  }
+
 }
 
 .popup-tabs {
